--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_rust_bridge: 2.11.1
-#  rust_lib_flutter_nnnoiseless:
-#    path: rust_builder
   path: ^1.9.1
   wav: ^1.5.0
 
@@ -23,6 +21,12 @@ dev_dependencies:
   ffigen: 19.0.0
   integration_test:
     sdk: flutter
+
+topics:
+  - 'audio'
+  - 'noise'
+  - 'sound'
+  - 'artificial-intelligence'
 
 flutter:
   uses-material-design: true
